--- a/tex/experiment.tex
+++ b/tex/experiment.tex
@@ -251,7 +251,7 @@ and secondary vertices.
 The TRT enhances the momentum resolution by providing additional track
 measurement points.
 The barrel is made of 73 planes of straw tubes filled with a gas
-mixture of $70\% Xe$, $27\% CO_2$ and $3\% O$. The tubes
+mixture of 70\% Xe, 27\% CO$_2$ and 3\% $O$. The tubes
 are arranged parallel to the beam axis.
 In the end-cap, there are 160 straw planes, oriented radially,
 covering a range of \mbox{$|\eta| < 2.0$}. 
@@ -438,7 +438,6 @@ The toroidal fields contain non-uniformities which need to be known to
 high precision to allow for an accurate measurement of muon momenta.
 Hence, 1800 Hall sensors were installed in the muon spectrometer 
 volume to enable the monitoring of the magnetic field.
-
 
 \subsection{Forward sub--detectors}
 \label{sec:forward}
