--- a/tex/reconstruction.tex
+++ b/tex/reconstruction.tex
@@ -230,7 +230,7 @@ the distributions as observed in data with the prediction.
 Figure~\ref{fig:datamcreco2011} and ~\ref{fig:datamcreco2012}
 shows the comparison of the distributions of
 the top quark pair invariant mass \mtt{}, transverse momentum \pttt{},
-rapidity \ytt{}, and velocity along the beam axis \betatt{} for the
+rapidity $|\ytt{}|$, and velocity along the beam axis \betatt{} for the
 datasets at \seventev{} and \eighttev{}, respectively.
 %                                   
 \begin{figure}[!htb]\centering
