--- a/tex/theory.tex
+++ b/tex/theory.tex
@@ -584,8 +584,8 @@ the LHC.
     quarks and antiquark at Tevatron (left) and LHC (right). The
     asymmetric initial state at Tevatron provides a preferential
     direction, resulting in a forward--backward asymmetry, while the
-    momentum imbalance between quark and antiquark at LHC allows to
-    define a central--forward asymmetry~\ref{Rodrigo:2012as}.} 
+    momentum imbalance between quark and antiquark at LHC allows the
+    definition of a central--forward asymmetry~\cite{Rodrigo:2012as}.} 
   \label{fig:rapidities}
 \end{figure}
 
