--- a/tex/results.tex
+++ b/tex/results.tex
@@ -3,7 +3,7 @@
 
 This section presents the unfolded \ac{} measurements at \seventev{}
 and \eighttev{}, both inclusive and differential as a function of \mtt{},
-\pttt{} and \ytt{}. The measurements at \seventev{} have been
+\pttt{} and $|\ytt{}|$. The measurements at \seventev{} have been
 published~\cite{Aad:2013cea}, while the measurements at \eighttev{}
 are internal results reported here for the purpose of this
 dissertation. The corresponding publication results are being
@@ -111,7 +111,7 @@ Total uncertainty                                & $0.010$ & $0.022$ & $0.018$\\
 \end{table}
 
 The differential \ac{} measurements as functions of
-\mtt{}, \pttt{} and \ytt{} are compared in Fig.~\ref{fig:unfac_diff}
+\mtt{}, \pttt{} and $|\ytt{}|$ are compared in Fig.~\ref{fig:unfac_diff}
 with the SM predictions and found to be consistent. 
 In addition, the results are compared with new physics predictions for
 color octets ({\it axigluons}) with masses of $m=300 \GeV{}$ and $7
@@ -184,7 +184,7 @@ collected in App.~\ref{app:correlations}.
 Analogous measurements of the asymmetry \ac{} at \seventev{} have been
 performed by the CMS Collaboration~\cite{Chatrchyan:2012cxa}, who
 reported an inclusive asymmetry
-$\ac{}=0.004\pm0.010(stat.)\pm0.011(syst.)$.
+$\ac{}=0.004\pm0.010(\rm{stat.})\pm0.011(\rm{syst.})$.
 The results are compatible with the SM predictions and with the
 measurements presented in this dissertation. 
 With about 46000 \ttbar{} events, the CMS sample has a similar size to the
@@ -207,7 +207,7 @@ background. All uncertainties related to the detector description
 are considered not correlated. Since the ATLAS results is
 dominated by the statistical uncertainty (uncorrelated), the combined
 results is insensitive to variations of these choices. The combined
-result is found to be $0.005\pm0.007(stat.)\pm0.006(syst.)$,
+result is found to be $0.005\pm0.007(\rm{stat.})\pm0.006(\rm{syst.})$,
 compatible with the SM prediction. The comparison between values of
 \ac{} as measured by ATLAS and CMS, and their combination is shown in
 Fig.~\ref{fig:combineac}.
@@ -301,7 +301,7 @@ background calibration.
   \label{fig:dy8tev}
 \end{figure}
 The inclusive \ac{} in \ttbar{} production at \eighttev{} is measured to be
-$\ac{}= 0.011\pm0.006(stat.+syst.)$, compatible with the SM prediction,
+$\ac{}= 0.011\pm0.006(\rm{stat.+syst.})$, compatible with the SM prediction,
 $\ac{}=0.0111\pm0.0004$. The improvement in precision with respect to
 the measurement at \seventev{} is due to the reduction of the
 statistical uncertainty that, with a \ttbar{} sample six times larger,
@@ -405,9 +405,9 @@ systematic uncertainties is detailed in App.~\ref{app:correlations}.
 
 Preliminary results at \eighttev{} from the CMS
 Collaboration~\cite{CMS-PAS-TOP-12-033} include the measurement of
-\ac{}, inclusively and as a function of \mtt{}, \pttt{} and \ytt{}.
+\ac{}, inclusively and as a function of \mtt{}, \pttt{} and $|\ytt{}|$.
 The reported inclusive asymmetry
-\mbox{$\ac{}=0.005\pm0.007(stat.)\pm0.006(syst.)$} is compatible with the SM
+\mbox{$\ac{}=0.005\pm0.007(\rm{stat.})\pm0.006(\rm{syst.})$} is compatible with the SM
 predictions and, with a total uncertainty about twice as large, with
 the measurement presented in this dissertation. Both
 statistical and systematic uncertainties are larger than the ones
