use antonella's geometry

--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,6 @@
 % adding pointlessnumbers to avoid "Figure 1.1.: ..."
-\documentclass[11pt, a4paper, openany]{book}
-\usepackage[paper=a4paper]{geometry}
+\documentclass[11pt, a4paper,twoside,openright]{book}
+\usepackage[paper=a4paper,hdivide={3cm, *, 3cm}, vscale=0.75]{geometry}
 
 \pdfoutput=1
 
