--- a/tex/appendix_results_table.tex
+++ b/tex/appendix_results_table.tex
@@ -177,19 +177,19 @@ Total uncertainty       & 0.08             &        0.07      &        0.07     
  &\multicolumn{6}{c}{$\mtt{}$ ~[GeV]} \\
 Source of systematic uncertainty&$0$--$420$&$420$--$500$&$500$--$600$&$600$--$750$&$750$--$900$&$>900$ \\
 \midrule
-Lepton reconstruction/identification & <0.003 & <0.002 & <0.002 & <0.002 & <0.005 & <0.004\\
-Lepton energy scale and resolution & <0.003 & <0.002 & <0.002 & <0.002 & <0.005 & <0.004 \\
-Jet reconstruction efficiency & <0.003 & <0.002 & <0.002 & <0.002 & <0.005 & <0.004  \\
+Lepton reconstruction/identification & $<0.003$ & $<0.002$ & $<0.002$ & $<0.002$ & $<0.005$ & $<0.004$\\
+Lepton energy scale and resolution & $<0.003$ & $<0.002$ & $<0.002$ & $<0.002$ & $<0.005$ & $<0.004$ \\
+Jet reconstruction efficiency & $<0.003$ & $<0.002$ & $<0.002$ & $<0.002$ & $<0.005$ & $<0.004$  \\
 Jet energy scale and resolution & 0.009 & 0.006 & 0.006 & 0.005 & 0.014 & 0.012 \\
-Missing transverse momentum & 0.004 & <0.002 & <0.002 & <0.002 & 0.005 & <0.004  \\
-Multijet background normalization & 0.003 & <0.002 & <0.002 & <0.002 & <0.005 & <0.004  \\
-Other backgrounds normalization & <0.003 & <0.002 & <0.002 & <0.002 & <0.005 & <0.004  \\
-$b$--tagging/mis--tag efficiencies & <0.003 & <0.002 & <0.002 & <0.002 & <0.005 & <0.004  \\
-Signal modeling & 0.024 & <0.002 & 0.004 & 0.009 & 0.008  & 0.079 \\
-Parton shower/hadronization & 0.003 & 0.004 & <0.002 & 0.01 & 0.022 &0.005 \\
+Missing transverse momentum & 0.004 & $<0.002$ & $<0.002$ & $<0.002$ & 0.005 & $<0.004$  \\
+Multijet background normalization & 0.003 & $<0.002$ & $<0.002$ & $<0.002$ & $<0.005$ & $<0.004$  \\
+Other backgrounds normalization & $<0.003$ & $<0.002$ & $<0.002$ & $<0.002$ & $<0.005$ & $<0.004$  \\
+$b$--tagging/mis--tag efficiencies & $<0.003$ & $<0.002$ & $<0.002$ & $<0.002$ & $<0.005$ & $<0.004$  \\
+Signal modeling & 0.024 & $<0.002$ & 0.004 & 0.009 & 0.008  & 0.079 \\
+Parton shower/hadronization & 0.003 & 0.004 & $<0.002$ & 0.01 & 0.022 &0.005 \\
 MC statistics & 0.005 & 0.003 & 0.004 & 0.004 & 0.008 & 0.007\\
 PDF & 0.005 &0.002 & 0.003 & 0.005 & 0.006 & 0.010\\
-Unfolding response & <0.003  & <0.002 & <0.002  & <0.002 & <0.005  & 0.004\\
+Unfolding response & $<0.003$  & $<0.002$ & $<0.002$  & $<0.002$ & $<0.005$  & 0.004\\
 \midrule
 Statistical uncertainty & 0.025 & 0.017 & 0.020 & 0.024 & 0.05 & 0.04\\
 \midrule
