--- a/tex/theory.tex
+++ b/tex/theory.tex
@@ -635,8 +635,8 @@ tests. However, a relatively wide range of asymmetries can be
 predicted. 
 \begin{figure}[!htb]
   \centering
-  \includegraphics[width=0.35\textwidth]{figures/theory/axigluon} 
-  \includegraphics[width=0.35\textwidth]{figures/theory/zprime} 
+  \includegraphics[trim={0 15cm 0 0},clip,width=0.4\textwidth]{figures/theory/axigluon} 
+  \includegraphics[trim={0 15cm 0 0},clip,width=0.4\textwidth]{figures/theory/zprime} 
   \caption{Tree--level \ttbar{} production for a s--channel
     color--octet (left) and for a t--channel Z' boson (right).} 
   \label{fig:npdiag}
