--- a/tex/acknowledgements.tex
+++ b/tex/acknowledgements.tex
@@ -1,4 +1,37 @@
 \chapter*{Acknowledgements}
 \addcontentsline{toc}{chapter}{Acknowledgements} 
 
-acknowledgements
+
+The research presented in this dissertation could not have been accomplished 
+without the support and encouragement of colleagues, family, and friends.
+I would particularly like to thank Aurelio for giving me the opportunity to work on 
+this topic, for patiently guiding me through the challenges of a physics analysis, 
+and most of all, for transmitting his optimistic and passionate scientific approach.
+Special thanks go also to:
+\begin{itemize}
+\item Mario, Martine and Matteo for expertly leading IFAE and the ATLAS group, 
+  and always being available to answer questions.
+\item Diego, who introduced me to the joys and burdens of collider physics 
+  and continued supporting me with wise words of advice.
+\item Davide, who made me a better programmer, 
+  and with whom I shared an important year of work, 
+  setting the foundations of the work described in this dissertation.
+\item Antonella, for all the useful advice about the thesis writing process.
+\item Juan Antonio and Ezequiel, for the fruitful collaboration.
+\item Allison, Clement and Dan, who joined the analysis 
+  effort with enthusiasm and hard work.
+\item Javier and Eve, for being so patient and helpful 
+  while working together on the analysis framework.
+\item my office mates during the past several month at IFAE, Garo and Roger,
+  for helping me through linguistic and scientific issues.
+\item Oscar and Angelo \& Viviana, for ensuring
+  I had a social life outside of CERN.
+\end{itemize} 
+
+Most importantly, I would like to thank my family, in particular my
+parents and grandparents, 
+for the constant support they provided throughout the course of my studies.
+In addition, I want to acknowledge Viviana and Alessandro for designing the
+cover of this thesis.
+Finally, I would like to mention a special person, Lyuda, 
+who virtually stood by my side for all these years.
