--- a/tex/title.tex
+++ b/tex/title.tex
@@ -1,6 +1,6 @@
 \newgeometry{top=1cm,bottom=1.5cm,right=1cm,left=1cm}
 \linespread{1.5}
-%\pagestyle{empty}
+\pagestyle{empty}
 \begin{center}
 \par
 \vspace{6pt}
@@ -68,3 +68,4 @@ September 2014 \\
 \large 
 \end{center}
 \newgeometry{top=1in,bottom=1.5in,right=1in,left=1in}
+\pagestyle{headings}
